@@ -3042,34 +3042,51 @@ player_desc(dbref player)
 void
 do_pemit_port(dbref player, const char *pc, const char *message, int flags)
 {
-  DESC *d;
+  DESC *d = NULL, *last = NULL;
   int port;
+  int total = 0;
+  char *next;
 
   if (!Hasprivs(player)) {
     notify(player, T("Permission denied."));
     return;
   }
 
-  port = atoi(pc);
-  if (port <= 0) {
-    notify(player, T("That's not a port number."));
+  if (!message || !*message || !pc || !*pc)
     return;
-  }
 
-  if (!*message) {
+  next = (char *) pc;
+  do {
+    if (flags & PEMIT_LIST)
+      next = next_in_list(&pc);
+    port = atoi(next);
+
+    if (port <= 0) {
+      notify_format(player, T("'%s' is not a port number."), next);
+    } else {
+      d = port_desc(port);
+      if (!d) {
+        notify(player, T("That port is not active."));
+      } else {
+        queue_string_eol(d, message);
+        total++;
+        last = d;
+      }
+    }
+
+  } while ((flags & PEMIT_LIST) && pc && *pc);
+
+  if (!total)
     return;
-  }
 
-  d = port_desc(port);
-  if (!d) {
-    notify(player, T("That port is not active."));
-    return;
+  if (!(flags & PEMIT_SILENT)) {
+    if (total == 1) {
+      notify_format(player, T("You pemit \"%s\" to %s."), message,
+                    (last && last->connected ? Name(last->player) : T("a connecting player")));
+    } else {
+      notify_format(player, T("You pemit \"%s\" to %d connections."), message, total);
+    }
   }
-
-  if (!(flags & PEMIT_SILENT))
-    notify_format(player, T("You pemit \"%s\" to %s."), message,
-                  (d->connected ? Name(d->player) : T("a connecting player")));
-  queue_string_eol(d, message);
 
 }
 
@@ -5639,7 +5656,7 @@ file_watch_init_in(void)
 
     make_nonblocking(watch_fd);
     flags = fcntl(watch_fd, F_GETFD);
-    if (flags < 0) 
+    if (flags < 0)
       penn_perror("file_watch_init_in: fcntl F_GETFD");
     else {
       flags |= FD_CLOEXEC;
@@ -5672,10 +5689,10 @@ file_watch_event_in(int fd)
     ptr = raw;
     while (len > 0) {
       int thislen;
-      struct inotify_event *ev  = (struct inotify_event *)ptr;     
-      const char *file = im_find(watchtable, ev->wd);      
+      struct inotify_event *ev  = (struct inotify_event *)ptr;
+      const char *file = im_find(watchtable, ev->wd);
 
-      thislen = sizeof(struct inotify_event) + ev->len;      
+      thislen = sizeof(struct inotify_event) + ev->len;
       len -= thislen;
       ptr += thislen;
 
@@ -5686,7 +5703,7 @@ file_watch_event_in(int fd)
 	    inotify_rm_watch(fd, ev->wd);
 	    im_delete(watchtable, ev->wd);
 	  }
-	  if (lastwd == ev->wd) 
+	  if (lastwd == ev->wd)
 	    continue;
 	  if (fcache_read_one(file)) {
 	    do_rawlog(LT_TRACE, "Updated cached copy of %s.", file);
